syntax = "proto3";

option java_package = "com.navercorp.scavenger.model";
option java_multiple_files = true;

message CommonPublicationData {
    string api_key = 1;
    string app_name = 2;
    string app_version = 3;
    string code_base_fingerprint = 4;
    string environment = 5;
    string hostname = 6;
    int64 jvm_started_at_millis = 7;
    string jvm_uuid = 8;
    int64 published_at_millis = 9;
}
